[workspace]
members = [
    "core",
    "endpoints", "example",
    "tx-logs",
    "vendored/jito-client",
    "vendored/jito-protos",
]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.99"
base64 = "0.22.1"
bincode = { version = "1.3.3" }
builder-rs = "0.1.0"
bytemuck = { version = "1.4.0" }
dashmap = "6.1.0"
dotenv = "0.15.0"
env_logger = "0.10.1"
futures = "0.3.31"
futures-util = "0.3.31"
graceful-endpoints = { path = "endpoints" }
graceful-core = { path = "core" }
graceful-tx-logs = { path = "tx-logs" }
helius-laserstream = "0.0.9"
itertools = "0.10.5"
jito-protos = { path = "vendored/jito-protos" }
jito-searcher-client = { path = "vendored/jito-client" }
log = "0.4.27"
metrics = "0.24.2"
prost-types = "0.12"
rand = "0.9.2"
reqwest = "0.11.27"
serde_json = { version = "1.0.56" }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
solana-account = "2.2.1"
solana-account-decoder = "2.3.7"
solana-client = "2.3.7"
solana-compute-budget = "2.3.7"
solana-compute-budget-instruction = "2.3.7"
solana-metrics = "2.3.7"
solana-perf = "2.3.7"
solana-program = "2.3.0"
#solana-program-error = "2.2.2"
solana-pubkey = "2.4.0"
solana-rpc-client-api = "2.3.7"
solana-sdk = "2.3.1"
solana-sdk-ids = "2.2.1"
solana-svm-transaction = "2.3.7"
solana-transaction-status = "2.3.7"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.17"
tokio-tungstenite = "0.27.0"
tonic = { version = "0.10", features = ["tls", "tls-roots", "tls-webpki-roots"] }
yellowstone-grpc-proto = "8.0.0"
