[package]
name = "example"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = {workspace = true}
dotenv = {workspace = true}
env_logger = {workspace = true}
graceful-core = {path = "../core"}
graceful-endpoints = {path = "../endpoints"}
log = {workspace = true}
solana-client = {workspace = true}
solana-sdk = {workspace = true}
tokio = {workspace = true}
